Bug #122254 --> delay initialing the biff status icon struct until we really need to use it. r=bhuvan sr=sspitzer